tests/ui/g-control-kind-out-of-band-label.stderr
error[E0277]: the trait bound `hibana::global::ControlLabelContract<40, OutOfBandKind>: hibana::global::ValidControlLabel` is not satisfied
  --> tests/ui/g-control-kind-out-of-band-label.rs:48:9
   |
48 |         g::Msg<40, GenericCapToken<OutOfBandKind>, OutOfBandKind>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `hibana::global::ValidControlLabel` is not implemented for `hibana::global::ControlLabelContract<40, OutOfBandKind>`
   |
   = help: the following other types implement trait `hibana::global::ValidControlLabel`:
             hibana::global::ControlLabelContract<106, K>
             hibana::global::ControlLabelContract<107, K>
             hibana::global::ControlLabelContract<108, K>
             hibana::global::ControlLabelContract<109, K>
             hibana::global::ControlLabelContract<110, K>
             hibana::global::ControlLabelContract<111, K>
             hibana::global::ControlLabelContract<112, K>
             hibana::global::ControlLabelContract<113, K>
           and $N others
   = note: required for `hibana::global::Message<hibana::global::LabelMarker<40>, GenericCapToken<OutOfBandKind>, OutOfBandKind>` to implement `hibana::global::MessageControlSpec`
note: required by a bound in `send`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>()
   |              ---- required by a bound in this function
...
   |     M: MessageSpec + SendableLabel + MessageControlSpec,
   |                                      ^^^^^^^^^^^^^^^^^^ required by this bound in `send`
